# tamasha

./: Cargo.toml  Readme.md
src/: cli.rs  client.rs  main.rs
